--- a/WebMediaController/WebMediaController-Info.plist
+++ b/WebMediaController/WebMediaController-Info.plist
@@ -24,6 +24,8 @@
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Tyler Rhodes / Jose Falcon. All rights reserved.</string>
 	<key>NSMainNibFile</key>
