Add MASPreferences library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MASShortcut"]
 	path = MASShortcut
 	url = git@github.com:shpakovski/MASShortcut.git
+[submodule "MASPreferences"]
+	path = MASPreferences
+	url = https://github.com/shpakovski/MASPreferences.git
