--- a/BeardedSpice/BeardedSpice-Info.plist
+++ b/BeardedSpice/BeardedSpice-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>foo.bar.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.beardedspice.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
