Try adding both xcode_project and xcode_workspace.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
 xcode_workspace: BeardedSpice.xcworkspace
+xcode_project: BeardedSpice.xcodeproj
 xcode_scheme: BeardedSpice
 before_install: gem install cocoapods
