--- a/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
+++ b/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
@@ -93,6 +93,6 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      revealArchiveInOrganizer = "YES">
+      revealArchiveInOrganizer = "NO">
    </ArchiveAction>
 </Scheme>
