Added Indie Shuffle media strategy

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -41,6 +41,8 @@
 		<true/>
 		<key>HypeMachine</key>
 		<true/>
+		<key>IndieShuffle</key>
+		<true/>
 		<key>Kollekt.FM</key>
 		<true/>
 		<key>LastFM</key>
