Add "disc.io" to the default preferences.

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -28,6 +28,8 @@
 		<true/>
 		<key>Deezer</key>
 		<true/>
+    <key>disco.io</key>
+    <true/>
 		<key>Digitally Imported</key>
 		<true/>
 		<key>GoogleMusic</key>
