Add in "Baboom" to defaults plist.

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -16,6 +16,8 @@
 		<true/>
 		<key>AudioMack</key>
 		<true/>
+    <key>Baboom</key>
+    <true/>
 		<key>BandCamp</key>
 		<true/>
 		<key>Beatguide</key>
