Added favorite Option,Modified the Registries & plist

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -30,6 +30,8 @@
 		<true/>
 		<key>Digitally Imported</key>
 		<true/>
+		<key>Gaana</key>
+		<true/>
 		<key>GoogleMusic</key>
 		<true/>
 		<key>Grooveshark</key>
