--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -34,6 +34,8 @@
 		<true/>
 		<key>Grooveshark</key>
 		<true/>
+		<key>HotNewHipHop</key>
+		<true/>
 		<key>HypeMachine</key>
 		<true/>
 		<key>IndieShuffle</key>
