Add MusicForProgramming.net strategy
- all APIs implemented that are possible
- site has long music sets rather than traditional short tracks

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -50,6 +50,8 @@
 		<true/>
 		<key>MixCloud</key>
 		<true/>
+		<key>MusicForProgramming</key>
+		<true/>
 		<key>MusicUnlimited</key>
 		<true/>
 		<key>NoAdRadio</key>
