Add Netflix strategy
- implemented toggle, pause, isPlaying, track info title
- site does not support: fav, track artist, track art
- skip forward and back probably possible but requires sending key press events
- fixes #61, replaces PR #126, thanks @martijnengler for the start

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -54,6 +54,8 @@
 		<true/>
 		<key>MusicUnlimited</key>
 		<true/>
+		<key>Netflix</key>
+		<true/>
 		<key>NoAdRadio</key>
 		<true/>
 		<key>Odnoklassniki</key>
