Add Audible strategy
- fav sets a bookmark
- prev skips back 30 seconds
- title/author oddly not available but we show artwork, chapter, and time
- fixes #62

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -16,6 +16,8 @@
 		<true/>
 		<key>Amazon Music</key>
 		<true/>
+		<key>Audible</key>
+		<true/>
 		<key>AudioMack</key>
 		<true/>
 		<key>BandCamp</key>
