Add BBC Radio strategy
Should support all BBC Radio stations listed at
http://www.bbc.co.uk/radio

This includes Radio 1,2,3,4,5,6, World Service, and about 40 local stations.
Track info uses the site-optional song lister, else falls back to the more
generic show information.

Resolves #194

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -22,6 +22,8 @@
 		<true/>
 		<key>BandCamp</key>
 		<true/>
+		<key>BBC Radio</key>
+		<true/>
 		<key>Beatguide</key>
 		<true/>
 		<key>Beats Music</key>
