Add BugsMusic strategy
BugsMusic(http://www.bugs.co.kr) is music streaming service in South Korea.

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -30,6 +30,8 @@
 		<true/>
 		<key>Bop.fm</key>
 		<true/>
+                <key>BugsMusic</key>
+		<true/>
 		<key>Chorus</key>
 		<true/>
 		<key>Deezer</key>
