Added iHeart Radio Strategy
And accidentally (but usefully) made the skip button switch stations
when listening to live radio (which I think is a useful side effect, so
I decided not to remove it).

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -44,6 +44,8 @@
 		<true/>
 		<key>HypeMachine</key>
 		<true/>
+		<key>iHeart Radio</key>
+		<true/>
 		<key>IndieShuffle</key>
 		<true/>
 		<key>Kollekt.FM</key>
