add Brain.fm MediaStrategy

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -30,7 +30,9 @@
 		<true/>
 		<key>Bop.fm</key>
 		<true/>
-                <key>BugsMusic</key>
+		<key>Brain.fm</key>
+		<true/>
+		<key>BugsMusic</key>
 		<true/>
 		<key>Chorus</key>
 		<true/>
