--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -38,6 +38,8 @@
 		<true/>
 		<key>Chorus</key>
 		<true/>
+		<key>Dailymotion</key>
+		<true/>
 		<key>Deezer</key>
 		<true/>
 		<key>Digitally Imported</key>
