Added Xiami support

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -104,6 +104,8 @@
 		<true/>
 		<key>Vimeo</key>
 		<true/>
+		<key>Xiami</key>
+		<true/>
 		<key>WonderFM</key>
 		<true/>
 		<key>Xbox Music</key>
