Added TurkTelekom Muzik - PR #370

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -110,6 +110,8 @@
 		<true/>
 		<key>TIDAL</key>
 		<true/>
+		<key>TTMuzik</key>
+		<true/>
 		<key>twitch.tv</key>
 		<true/>
 		<key>Udemy</key>
