Fix for making stored functions executable. Currently a hack

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -53,7 +53,7 @@
     <integer>1</integer>
     <key>iHeartRadio</key>
     <integer>1</integer>
-    <key>IndieShutffle</key>
+    <key>IndieShuffle</key>
     <integer>1</integer>
     <key>Jango</key>
     <integer>1</integer>
