--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -59,6 +59,8 @@
     <integer>1</integer>
     <key>KollektFm</key>
     <integer>1</integer>
+    <key>KCRW</key>
+    <integer>1</integer>
     <key>LastFm</key>
     <integer>1</integer>
     <key>LeTournedisque</key>
