Added my KCRW strategy

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -61,6 +61,8 @@
 		<true/>
 		<key>Kollekt.FM</key>
 		<true/>
+		<key>KCRW</key>
+		<true/>
 		<key>LastFM</key>
 		<true/>
 		<key>Logitech Media Server</key>
