Add ProductHunt strategy
As asked in issue #395

- toggle
- previous
- next
- favorite
- pause
- isPlaying
- trackInfo

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -83,6 +83,8 @@
 		<true/>
 		<key>PocketCasts</key>
 		<true/>
+		<key>ProductHunt</key>
+		<true/>
 		<key>Saavn</key>
 		<true/>
 		<key>Shuffler.fm</key>
