Add ListenOnRepeat support
As asked in issue #395

- isPlaying
- toggle
- previous
- next
- pause
- favorite
- trackInfo (track, favorite) (Had some issues for the image, I might
try again later)

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -63,6 +63,8 @@
 		<true/>
 		<key>LastFM</key>
 		<true/>
+		<key>ListenOnRepeat</key>
+		<true/>
 		<key>Logitech Media Server</key>
 		<true/>
 		<key>MixCloud</key>
