--- a/BeardedSpice/MediaStrategies/PocketCasts.plist
+++ b/BeardedSpice/MediaStrategies/PocketCasts.plist
@@ -47,8 +47,8 @@
     <key>trackInfo</key>
     <string>(function(){
         return {
-            'track': document.querySelector('div.player_top div.player_episode').innerHTML,
-            'album': document.querySelector('div.player_top div.player_podcast_title').innerHTML,
+            'track': document.querySelector('div.player_top div.player_episode').innerText,
+            'album': document.querySelector('div.player_top div.player_podcast_title').innerText,
             'image': document.querySelector('div.player_top div.player_artwork img').src,
         };
     })()</string>
