--- a/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
+++ b/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:BeardedSpice.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9679334C1855173100A49AC7"
+               BuildableName = "BeardedSpiceTests.xctest"
+               BlueprintName = "BeardedSpiceTests"
+               ReferencedContainer = "container:BeardedSpice.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,16 +42,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9679334C1855173100A49AC7"
-               BuildableName = "BeardedSpiceTests.xctest"
-               BlueprintName = "BeardedSpiceTests"
-               ReferencedContainer = "container:BeardedSpice.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
