--- a/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
+++ b/BeardedSpice.xcodeproj/xcshareddata/xcschemes/BeardedSpice.xcscheme
@@ -42,6 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9679334C1855173100A49AC7"
+               BuildableName = "BeardedSpiceTests.xctest"
+               BlueprintName = "BeardedSpiceTests"
+               ReferencedContainer = "container:BeardedSpice.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
