--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-osx_image: xcode7
+osx_image: xcode7.3
 language: objective-c
 xcode_workspace: BeardedSpice.xcworkspace
 xcode_scheme: BeardedSpice
-before_install: gem install cocoapods
+rvm:
+  - 2.2.4
+before_install:
+  - gem install cocoapods -v 1.0.1
+  - pod env
+
