Added Gaana (fixes #425).

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -36,6 +36,8 @@
 	<integer>1</integer>
 	<key>FocusAtWill</key>
 	<integer>1</integer>
+	<key>Gaana</key>
+	<integer>1</integer>
 	<key>GoogleMusic</key>
 	<integer>1</integer>
 	<key>GrooveShark</key>
