Add support for Zing MP3

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -117,6 +117,8 @@
 		<true/>
 		<key>YouTube</key>
 		<true/>
+		<key>Zing</key>
+		<true/>
 		<key>focus@will</key>
 		<true/>
 		<key>Udemy</key>
