redefine ui for strategy list

--- a/BeardedSpice/BeardedSpice-Info.plist
+++ b/BeardedSpice/BeardedSpice-Info.plist
@@ -4,6 +4,23 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>bsstrategy</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>beard</string>
+			<key>CFBundleTypeName</key>
+			<string>BeardedSpice Strategy Javascript</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSTypeIsPackage</key>
+			<integer>0</integer>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
