--- a/BeardedSpice/BeardedSpice-Info.plist
+++ b/BeardedSpice/BeardedSpice-Info.plist
@@ -9,16 +9,35 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>bsstrategy</string>
+				<string>$(BS_STRATEGY_EXTENSION)</string>
 			</array>
 			<key>CFBundleTypeIconFile</key>
-			<string>beard</string>
+			<string>AppIcon</string>
 			<key>CFBundleTypeName</key>
-			<string>BeardedSpice Strategy Javascript</string>
+			<string>BeardedSpice Strategy Javascript.</string>
 			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
+			<string>Editor</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.beardedspice.bsstrategy</string>
+			</array>
 			<key>LSTypeIsPackage</key>
 			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>js</string>
+				<string>htc</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string></string>
+			<key>CFBundleTypeName</key>
+			<string>JavaScript source</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
@@ -34,7 +53,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.5</string>
+	<string>2.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -54,5 +73,29 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.source-code</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>BeardedSpice Strategy Javascript.</string>
+			<key>UTTypeIconFile</key>
+			<string>AppIcon</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.beardedspice.bsstrategy</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://beardedspice.github.io</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>$(BS_STRATEGY_EXTENSION)</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
