--- a/BeardedSpice/Config.xcconfig
+++ b/BeardedSpice/Config.xcconfig
@@ -11,4 +11,4 @@ BS_STRATEGY_EXTENSION = bsstrategy
 
 
 // Marco definition
-GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\"
+GCC_PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\"
