--- a/BeardedSpice/Debug-Config.xcconfig
+++ b/BeardedSpice/Debug-Config.xcconfig
@@ -11,8 +11,8 @@
 DEBUG_STRATEGY = 0
 
 
+#include "./Config.xcconfig"
 
 // Marco definition
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) DEBUG_STRATEGY=$(DEBUG_STRATEGY)
+GCC_PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" DEBUG_STRATEGY=$(DEBUG_STRATEGY)
 
-#include "Config.xcconfig"
