Add Beatport support
https://beatport.com

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -16,6 +16,8 @@
 	<integer>1</integer>
 	<key>Beatguide</key>
 	<integer>1</integer>
+	<key>Beatport</key>
+	<integer>1</integer>
 	<key>BeatsMusic</key>
 	<integer>1</integer>
 	<key>Blitzr</key>
