--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -22,6 +22,8 @@
 		<true/>
 		<key>Beatguide</key>
 		<true/>
+		<key>Beatport</key>
+		<true/>
 		<key>Beats Music</key>
 		<true/>
 		<key>blitzr</key>
