--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -134,6 +134,8 @@
 	<integer>1</integer>
 	<key>Vk</key>
 	<integer>1</integer>
+	<key>VKnew</key>
+	<integer>1</integer>
 	<key>WatchaPlay</key>
 	<integer>1</integer>
 	<key>WonderFm</key>
