Add Cozy Cloud Music app support

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -30,6 +30,8 @@
 	<integer>1</integer>
 	<key>Coursera</key>
 	<integer>1</integer>
+	<key>CozyCloud</key>
+	<integer>1</integer>
 	<key>Deezer</key>
 	<integer>2</integer>
 	<key>DigitallyImported</key>
