--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -34,6 +34,8 @@
 		<true/>
 		<key>Chorus</key>
 		<true/>
+		<key>Cozy Cloud</key>
+		<true/>
 		<key>Dailymotion</key>
 		<true/>
 		<key>Deezer</key>
