--- a/BeardedSpice/BeardedSpice-Info.plist
+++ b/BeardedSpice/BeardedSpice-Info.plist
@@ -73,6 +73,10 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSAppleScriptEnabled</key>
+	<true/>
+	<key>OSAScriptingDefinition</key>
+	<string>BeardedSpiceSuite.sdef</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
