--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -70,6 +70,8 @@
 	<integer>1</integer>
 	<key>MixCloud</key>
 	<integer>2</integer>
+	<key>Mixcloud Beta</key>
+	<integer>1</integer>
 	<key>MusicForProgramming</key>
 	<integer>1</integer>
 	<key>MusicUnlimited</key>
