--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -68,7 +68,7 @@
 	<integer>1</integer>
 	<key>LogitechMediaServer</key>
 	<integer>1</integer>
-	<key>MixCloud</key>
+	<key>Mixcloud</key>
 	<integer>2</integer>
 	<key>Mixcloud Beta</key>
 	<integer>1</integer>
