Added Anghami to UserDefaults.plist

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -12,6 +12,8 @@
 		<true/>
 		<key>Amazon Music</key>
 		<true/>
+		<key>Anghami</key>
+		<true/>
 		<key>Audible</key>
 		<true/>
 		<key>AudioMack</key>
