--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -118,7 +118,7 @@
 	<integer>1</integer>
 	<key>Stitcher</key>
 	<integer>1</integer>
-    <key>Stripewaves</key>
+	<key>Stripewaves</key>
 	<integer>1</integer>
 	<key>Subsonic</key>
 	<integer>1</integer>
@@ -155,6 +155,8 @@
 	<key>Zing</key>
 	<integer>1</integer>
 	<key>Anghami</key>
+	<integer>1</integer>
+	<key>Fip</key>
 	<integer>1</integer>
 </dict>
 </plist>
