Add media strategy for FocusMusicFM.com

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -42,6 +42,8 @@
 	<integer>1</integer>
 	<key>FocusAtWill</key>
 	<integer>1</integer>
+	<key>FocusMusicFM</key>
+	<integer>1</integer>
 	<key>Gaana</key>
 	<integer>1</integer>
 	<key>GoogleMusic</key>
