Add strategy for be-at.tv
Closes #320

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -16,6 +16,8 @@
 	<integer>1</integer>
 	<key>BBCRadio</key>
 	<integer>1</integer>
+	<key>BE-AT.TV</key>
+	<integer>1</integer>
 	<key>Beatguide</key>
 	<integer>1</integer>
 	<key>Beatport</key>
