--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ os: osx
 osx_image: xcode7.3
 language: objective-c
 rvm:
-  - 2.2.4
+  - 2.3.1
 before_install:
-  - gem install cocoapods -v 1.0.1
+  - gem install cocoapods
   - gem install xcpretty -N --no-ri --no-rdoc
 
 script:
