--- a/BeardedSpice/Config.xcconfig
+++ b/BeardedSpice/Config.xcconfig
@@ -10,5 +10,5 @@ BS_STRATEGY_EXTENSION = bsstrategy
 
 
 
-// Marco definition
+// Macro definition
 GCC_PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\"
