Analytics logic for prerelease builds.
This does not include the Fabric build script or BeardedSpice-Info.plist entry required to send data.

--- a/BeardedSpice/Config.xcconfig
+++ b/BeardedSpice/Config.xcconfig
@@ -8,7 +8,6 @@
 
 BS_STRATEGY_EXTENSION = bsstrategy
 
-
-
 // Marco definition
 GCC_PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\"
+PRERELEASE = 1
