--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -6,6 +6,8 @@
 	<integer>2</integer>
 	<key>StyleJukebox</key>
 	<integer>1</integer>
+	<key>AmazonAlexa</key>
+	<integer>1</integer>
 	<key>AmazonMusic</key>
 	<integer>1</integer>
 	<key>AppleDeveloper</key>
