--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -174,5 +174,7 @@
 	<integer>1</integer>
 	<key>Xiami</key>
 	<integer>1</integer>
+	<key>PhishTracks</key>
+	<integer>1</integer>
 </dict>
 </plist>
