--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -76,6 +76,8 @@
 	<integer>1</integer>
 	<key>LogitechMediaServer</key>
 	<integer>1</integer>
+	<key>Lynda</key>
+	<integer>1</integer>
 	<key>MixCloud</key>
 	<integer>3</integer>
 	<key>MusicForProgramming</key>
