--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -100,6 +100,8 @@
 	<integer>1</integer>
 	<key>Overcast</key>
 	<integer>1</integer>
+	<key>Pakartot</key>
+	<integer>1</integer>
 	<key>Pandora</key>
 	<integer>3</integer>
 	<key>PhishIn</key>
