--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -72,6 +72,8 @@
 	<integer>1</integer>
 	<key>LeTournedisque</key>
 	<integer>1</integer>
+	<key>ListenersPlaylist</key>
+	<integer>1</integer>
 	<key>ListenOnRepeat</key>
 	<integer>1</integer>
 	<key>LogitechMediaServer</key>
