Add Egghead.io media strategy

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -42,6 +42,8 @@
 	<integer>2</integer>
 	<key>DigitallyImported</key>
 	<integer>1</integer>
+	<key>Eggheadio</key>
+	<integer>1</integer>
 	<key>EightTracks</key>
 	<integer>1</integer>
 	<key>Fip</key>
