--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -54,6 +54,8 @@
 	<integer>1</integer>
 	<key>Gaana</key>
 	<integer>1</integer>
+	<key>GenieMusic</key>
+	<integer>1</integer>
 	<key>GoogleMusic</key>
 	<integer>2</integer>
 	<key>GrooveShark</key>
