initial BBC  programmes support

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -18,6 +18,8 @@
 	<integer>2</integer>
 	<key>BBCRadio</key>
 	<integer>1</integer>
+	<key>BBCRadioProgrammes</key>
+	<integer>1</integer>
 	<key>BE-AT.TV</key>
 	<integer>1</integer>
 	<key>Beatguide</key>
