add madsonic strategy

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -88,6 +88,8 @@
 	<integer>1</integer>
 	<key>Lynda</key>
 	<integer>1</integer>
+	<key>Madsonic</key>
+	<integer>1</integer>
 	<key>MixCloud</key>
 	<integer>3</integer>
 	<key>MusicForProgramming</key>
