--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -82,6 +82,8 @@
 	<integer>1</integer>
 	<key>ListenersPlaylist</key>
 	<integer>1</integer>
+	<key>ListenMoe</key>
+	<integer>1</integer>
 	<key>ListenOnRepeat</key>
 	<integer>1</integer>
 	<key>LogitechMediaServer</key>
