--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -64,6 +64,8 @@
 	<integer>1</integer>
 	<key>HotNewHipHop</key>
 	<integer>1</integer>
+	<key>Hungama</key>
+	<integer>1</integer>
 	<key>HypeMachine</key>
 	<integer>1</integer>
 	<key>iHeartRadio</key>
