Fixed bug in General Preferences and disabled volume control by default

--- a/BeardedSpice/BeardedSpiceUserDefaults.plist
+++ b/BeardedSpice/BeardedSpiceUserDefaults.plist
@@ -17,6 +17,6 @@
 	<key>BeardedSpiceShowProgress</key>
 	<false/>
 	<key>BeardedSpiceCustomVolumeControl</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
