Add partial DatPiff support

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -40,6 +40,8 @@
 	<integer>1</integer>
 	<key>CozyCloud</key>
 	<integer>1</integer>
+	<key>DatPiff</key>
+	<integer>1</integer>
 	<key>Deezer</key>
 	<integer>3</integer>
 	<key>DigitallyImported</key>
