--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -10,8 +10,8 @@
 	<integer>1</integer>
 	<key>Audible</key>
 	<integer>1</integer>
-	<key>AudioMack</key>
-	<integer>1</integer>
+	<key>Audiomack</key>
+	<integer>2</integer>
 	<key>BandCamp</key>
 	<integer>2</integer>
 	<key>BandCampWhiteLabel</key>
