--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -186,6 +186,8 @@
 	<integer>3</integer>
 	<key>WatchaPlay</key>
 	<integer>1</integer>
+	<key>WETA</key>
+	<integer>1</integer>
 	<key>WonderFm</key>
 	<integer>2</integer>
 	<key>XboxMusic</key>
