Add support for jamendo.com

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -62,6 +62,9 @@
 	<integer>1</integer>
 	<key>IndieShuffle</key>
 	<integer>1</integer>
+	<key>Jamendo</key>
+	<integer>1</integer>
+	<integer>1</integer>
 	<key>Jango</key>
 	<integer>1</integer>
 	<key>KCRW</key>
