--- a/BeardedSpice/Debug-Config.xcconfig
+++ b/BeardedSpice/Debug-Config.xcconfig
@@ -14,5 +14,5 @@ DEBUG_STRATEGY = 1
 #include "./Config.xcconfig"
 
 // Macro definition
-GCC_PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" DEBUG_STRATEGY=$(DEBUG_STRATEGY)
+GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS) DEBUG_STRATEGY=$(DEBUG_STRATEGY)
 
