added RadioTunes strategy (#303)

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -136,6 +136,8 @@
 	<integer>1</integer>
 	<key>ProductHunt</key>
 	<integer>1</integer>
+	<key>RadioTunes</key>
+	<integer>1</integer>
 	<key>Rdio</key>
 	<integer>1</integer>
 	<key>RedditMusic</key>
