--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -202,5 +202,7 @@
 	<integer>1</integer>
 	<key>Zvooq</key>
 	<integer>1</integer>
+	<key>SanookMusic</key>
+	<integer>1</integer>
 </dict>
 </plist>
