--- a/BeardedSpice/Config.xcconfig
+++ b/BeardedSpice/Config.xcconfig
@@ -8,10 +8,6 @@
 
 BS_STRATEGY_EXTENSION = bsstrategy
 
-BS_APP_GROUP = com.beardedspice.group
-BS_SAFARI_EXTENSION_DEFAULTS = com.apple.Safari.Extensions
-BS_SAFARI_EXTENSION_IDENTIFIER = com.beardedspice.BeardedSpice.SafariExtension
-
 // Macro definition
-PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\" BS_APP_GROUP=@\"$(BS_APP_GROUP)\" BS_SAFARI_EXTENSION_IDENTIFIER=@\"$(BS_SAFARI_EXTENSION_IDENTIFIER)\" BS_SAFARI_EXTENSION_DEFAULTS=@\"$(BS_SAFARI_EXTENSION_DEFAULTS)\"
+PREPROCESSOR_DEFINITIONS = BS_STRATEGY_EXTENSION=@\"$(BS_STRATEGY_EXTENSION)\"
 GCC_PREPROCESSOR_DEFINITIONS = $(PREPROCESSOR_DEFINITIONS)
