--- a/BrowserExtensions/BeardedSpice.safariextension/Info.plist
+++ b/BrowserExtensions/BeardedSpice.safariextension/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>Chrome</key>
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>5F2QV47DGC</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
