Adds Amazon Prime Video media strategy

--- a/BeardedSpice/MediaStrategies/versions.plist
+++ b/BeardedSpice/MediaStrategies/versions.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>AmazonMusic</key>
 	<integer>1</integer>
+    <key>AmazonPrimeVideo</key>
+    <integer>1</integer>
 	<key>Anghami</key>
 	<integer>1</integer>
 	<key>AppleDeveloper</key>
